<resources>
    <string name="app_name">Alfa</string>

    <!-- input text -->
    <string name="email">Email</string>
    <string name="nim">NIM</string>
    <string name="password">Password</string>
    <string name="email_or_nim">Email or NIM</string>
    <string name="search">Search . . .</string>

    <!-- text -->
    <string name="selanjutnya">Selanjutnya</string>
    <string name="daftar">Daftar</string>
    <string name="event">Event</string>
    <string name="alumni">Alumni</string>
    <string name="sesi_alumni">Sesi Alumni</string>
    <string name="text_daftar1">Masukan alamat email dan NIM anda untuk mendaftarkan akun anda. Kami akan mengirimkan kode verifikasi untuk akun anda.</string>
    <string name="sudah_punya_akun_masuk">Sudah Punya Akun? Masuk</string>
    <string name="konfirmasi_email_anda">Konfirmasi Email Anda</string>
    <string name="masukan_kode_konfirmasi_yang_telah_dikirimkan_pada_akun">Masukan kode konfirmasi yang telah dikirimkan pada akun</string>
    <string name="kode_konfimasi">Kode konfimasi</string>
    <string name="halo">Halo, SriWahyuni</string>
    <string name="haloadmin">Halo, Admin</string>
    <string name="katherinprofile">Profil Katherin Anna</string>
    <string name="status">Online</string>
    <string name="ambil_gambar">Ambil Gambar Wajah</string>
    <string name="info_ambilgambar">Pastikan wajah anda tidak blur dan tertangkap kamera untuk pemeriksaan keamanan</string>
    <string name="data_dikirim">Data Dikirim</string>
    <string name="profile_saya">Profile Saya</string>
    <string name="nama_akun">Sri Wahyuni</string>
    <string name="nama_profil">Katherin Anna P Lesnussa</string>
    <string name="prodiakun">S1 - Teknologi Informasi</string>
    <string name="nim_akun">191402078</string>
    <string name="follow">Follow</string>
    <string name="job_akun">Administrasion at BNI</string>
    <string name="job_profil">Web Design at Telkom</string>
    <string name="info_datadikirim1">Pengambilan gambar digunakan untuk memastikan pengguna akun.</string>
    <string name="info_datakirim2">Akun akan diperiksa secara manual. Tunggu dalam waktu 24 jam, kami akan mengirim pesan melalui email anda.</string>
    <string name="domisili">Domisili</string>
    <string name="negara">Negara : Indonesia</string>
    <string name="kota">Kota : Medan</string>
    <string name="detail">Detail Profesi</string>
    <string name="pengalaman">Pengalaman : 2 Tahun</string>
    <string name="peran">Peran : Admin</string>
    <string name="industri">Industri : Informasi dan Komunikasi</string>
    <string name="office">BNI</string>
    <string name="role">Administration</string>
    <string name="tanggal">Januari 2021 sampai sekarang</string>
    <string name="riwayat">Riwayat Pendidikan</string>
    <string name="nama_institusi">Universitas Sumatera Utara</string>
    <string name="prodi">SI - Teknologi Informasi</string>
    <string name="tahun">2019</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="success">Berhasil!</string>
    <string name="info_berhasil">Kami telah mengirimkan link melalui email anda. Silahkan periksa spam atau pesan masuk.</string>
    <string name="lupa_password_anda">Lupa password anda?</string>
    <string name="tv_singin">Tidak punya akun? Buat Akun.</string>
    <string name="email_pendaftar">happyaja@gmail.com</string>
    <string name="kirim_ulang">Didn\'t receive code? resend Again</string>
    <string name="tracer_study">TRACER STUDY</string>
    <string name="halo_sobat_alfa">Halo Sobat Alfa</string>
    <string name="info_trs">Anda telah menjalani perjalan 2 tahun lebih setelah perkuliahan anda di Fakultas Ilmu Komputer dan Teknologi Informasi. Kami ingin mengetahui pengalaman anda setelah kelulusan anda di Fakultas kita. Melalui survei ini kami mengharapkan informasi yang berkaitaan dengan perjalanan kelulusan anda.</string>
    <string name="info_ts">Survei ini bertujuan untuk pelacakan jejak lulusan/alumni yang dijadikan sebagai dasar acuan pemikiran dan pengambilan kebijakan untuk pengembangan pendidikan di Fakultas Ilmu Komputer dan Teknologi Informasi sebagai langkah antipasi dan adaptasi terhadap pengembangan dunia kerja dan dunia bisnis pada masa mendatang.</string>
    <string name="lihat_profile">Lihat Profile</string>


    <!-- button -->
    <string name="teknologi_ninformasi">Teknologi\nInformasi</string>
    <string name="ilmu_nkomputer">Ilmu\nKomputer</string>
    <string name="btn_selesai">Selesai</string>
    <string name="btn_edit">Edit Profile</string>
    <string name="btn_masuk">MASUK</string>

    <string name="btn_kembali">KEMBALI</string>
    <string name="btn_kamera">Ambil Gambar</string>

    <!-- icon -->
    <string name="logo_alfa">logo alfa</string>
    <string name="img_akun">img akun</string>
    <string name="ic_chat">icon chat</string>
    <string name="ic_notif">icon notif</string>
    <string name="img_newpost">img new post</string>
    <string name="img_email">img email</string>
    <string name="img_whatsapp">img whatsapp</string>
    <string name="img_instagram">img instagram</string>
    <string name="img_linkedin">img linkedin</string>
    <string name="ic_back">ic_back</string>
    <string name="ic_like">ic_like</string>
    <string name="ic_cmnt">ic_coment</string>
    <string name="img_acara">img acara</string>
    <string name="judul_event">Guest Lecture “Machine Learning”</string>
    <string name="info_event">Let’s find out what trends in machine learning, learn, get the inspiration, and make an innovation!</string>
    <string name="beranda">Beranda</string>
    <string name="tambah_event">Tambah Event</string>
    <string name="akun">Akun</string>
    <string name="pencarian">Pencarian</string>
    <string name="acara">Acara</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="akun_saya">Akun Saya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="detail_acara">Detail Acara</string>
    <string name="nama_event">Fasilkom Alumni Meet and Reunion Celebrations</string>
    <string name="tv_lokasi">Lokasi :</string>
    <string name="lokasi">Gedung C Fasilkom-TI, Universitas Sumatera Utara, \n Jl. Alumni No.3, Padang Bulan, Kec. Medan Baru, \n Kota Medan, Sumatera Utara 20155</string>
    <string name="tv_tanggal">Tanggal</string>
    <string name="tanggalevent">Sabtu, 1 Oktober 2022</string>
    <string name="deskripsi_acara"><![CDATA[Dear Alumni, \n \n We have a great pleasure to inform & invite you for Alumni Meet and Reunion being celebrated on 1st october 2022. It’s a great opportunity to interact with your batch-mates and relish & refresh your past memories.]]></string>
    <string name="simpan">Simpan</string>
    <string name="tv_negara">Negara :</string>
    <string name="tv_kota">Kota :</string>
    <string name="et_kota">Medan</string>
    <string name="et_negara">Indonesia</string>
    <string name="tv_sosmed">Sosial Media</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="et_wa">083623672468</string>
    <string name="et_email">sriwahyuni@gmail.com</string>
    <string name="ganti_foto_profil">Ganti Foto Profil</string>
    <string name="alfa">ALFA</string>
    <string name="alumni_fasilkom_ti">Alumni Fasilkom- TI</string>
    <string name="instagram">Instagram</string>
    <string name="sriwahyuni">sriwahyuni</string>
    <string name="linkedin">LinkedIn</string>
    <string name="peran_profesi">Peran</string>
    <string name="admin">Admin</string>
    <string name="kantor">Kantor</string>
    <string name="tanggal_masuk">Tanggal Masuk</string>
    <string name="tanggal_kerja">13-12-2020</string>
    <string name="fakultas">Fakultas</string>
    <string name="jurusan">Jurusan</string>
    <string name="tingkatan">Tingkatan</string>
    <string name="s1">S1</string>
    <string name="tahun_angkatan">2019</string>
    <string name="tahun_angkata">Tahun Angkatan</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="ketik_pesan">Ketik Pesan...</string>
    <string name="apa_kabar">Apa kabar !!</string>
    <string name="chat2">Wahhh.. dah lama ya gak ketemu. Punya kesibukan apa sekarangg!!</string>
    <string name="iv_sent">iv_sent</string>
    <string name="lagi_sok_sibuk_aja_hehehe">Lagi sok sibuk aja hehehe</string>
    <string name="jumlah_post">4</string>
    <string name="tv_post">Post</string>
    <string name="teman">Teman</string>
    <string name="jumlah_teman">10</string>
    <string name="ic_setting">ic_setting</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="keluar">Keluar</string>
    <string name="tentang_kami">Tentang</string>
    <string name="kirim_pesan">Kirim Pesan</string>
    <string name="pengajuan_alumni">Pengajuan Alumni</string>
    <string name="info_fp_2">Kami akan mengirimkan melalui \n alamat email anda.</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="info_fp">Masukan NIM atau alamat Email yang \n ditautkan ke akun anda</string>
    <string name="kembali_daftar">Kembali ke form Daftar</string>
    <string name="postingan_baru">Postingan Baru</string>
    <string name="judul">Judul</string>
    <string name="masukan_judul">Masukan Judul...</string>
    <string name="konten">Konten</string>
    <string name="ketik_konten">Ketik Konten</string>
    <string name="komentar">Komentar</string>
    <string name="nanda_amelia">Nanda Amelia</string>
    <string name="thank_you">Thank You !!</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="pengaajuan_alumni">Pengaajuan Alumni</string>
    <string name="minggu_ini">Minggu Ini</string>
    <string name="bulan_ini">Bulan Ini</string>
    <string name="baru_baru_ini">Baru-Baru Ini</string>
    <string name="bingkai">bingkai</string>



    <!-- Event -->
    <string name="nama_event1">Guest Lecture “Machine Learning”</string>
    <string name="nama_event2">Webinar “Research Trend in Big Data”</string>
    <string name="nama_event3">Webinar “Training of Trainer Related to Computer Graphics and Vision</string>
    <string name="nama_event4">Workshop of Writing Dissertation Proposal</string>
    <string name="nama_event5">Workshop “Preparation of PKM Students”</string>
    <string name="nama_event6">Talkshow “Building Digital Ecosystem”</string>

    <string name="desc1">Let’s find out what trends in machine learning, learn, get the inspiration, and make an innovation!</string>
    <string name="desc2">Let’s find out what trends in big data, learn, get the inspiration, and make an innovation!</string>
    <string name="desc3">Let’s find out what trends in computer graphics, learn, get the inspiration, and make an innovation!</string>
    <string name="desc4">Let’s find out what trends in writing dissertation proposal, learn, get the inspiration, and make an innovation!</string>
    <string name="desc5">Let’s find out what trends in Preparation, learn, get the inspiration, and make an innovation!</string>
    <string name="desc6">Let’s find out what trends in building digital ecosystem, learn, get the inspiration, and make an innovation!</string>
    <string name="kemarin">Kemarin</string>
    <string name="hari_ini">Hari Ini</string>


</resources>