<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_01"
    tools:context=".alumni.fitur.BuatPostingan">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#266041">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start"
            android:contentDescription="@string/ic_back"
            android:layout_marginStart="30dp"
            app:srcCompat="@drawable/ic_back" />
        <TextView
            android:id="@+id/alfa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postingan_baru"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"/>
        <ImageView
            android:id="@+id/btn_selesai"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/simpan"
            android:layout_marginEnd="30dp"
            app:srcCompat="@drawable/ic_selesai" />
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:fontFamily="@font/poppins"
        android:textColor="@color/green_01"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/et_judul_post"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Judul"
        android:hint="@string/masukan_judul"
        app:layout_constraintTop_toBottomOf="@id/tv_judul"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/konten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/konten"
        android:fontFamily="@font/poppins"
        android:textColor="@color/green_01"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/et_judul_post"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/et_konten_post"
        android:autofillHints="Post"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/ketik_konten"
        app:layout_constraintTop_toBottomOf="@id/konten"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>