<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_01"
    tools:context=".alumni.DetailAlumni">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#266041"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start"
            android:contentDescription="@string/ic_back"
            android:layout_marginStart="30dp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/katherinprofile"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="wrap_content"
        android:background="@color/background_01"
        android:layout_height="110dp"
        android:paddingTop="10dp"
        android:src="@drawable/katherin"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/namaakun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/nama_profil"
        android:textColor="@color/black"
        android:background="@color/background_01"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />
    <TextView
        android:id="@+id/prodi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prodiakun"
        android:background="@color/background_01"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        android:textColor="@color/green_01"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/namaakun"/>
    <TextView
        android:id="@+id/nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nim_akun"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:textColor="@color/green_01"
        android:background="@color/background_01"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prodi"/>
    <TextView
        android:id="@+id/pekerjaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_akun"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        android:textColor="@color/green_01"
        android:background="@color/background_01"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nim"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:fontFamily="@font/poppins"
        android:textColorHint="@color/white"
        android:hint="@string/follow"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/pekerjaan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_chat"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="10dp"
        android:textColorHint="@color/white"
        android:hint="@string/chat"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/pekerjaan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_follow" />

    <LinearLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_chat"
        android:background="@color/background_01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/gmail"
            android:contentDescription="@string/img_email"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/img_logo_gmail"/>
        <ImageView
            android:id="@+id/whatsapp"
            android:contentDescription="@string/img_whatsapp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/img_logo_whatsapp"
            android:layout_marginStart="30dp"/>
        <ImageView
            android:id="@+id/linkedin"
            android:contentDescription="@string/img_linkedin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/img_logo_linkedin"
            android:layout_marginStart="30dp"/>
        <ImageView
            android:id="@+id/instagram"
            android:contentDescription="@string/img_instagram"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/img_logo_instagram"
            android:layout_marginStart="30dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="430dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_domisili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domisili"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/green_01"
                android:textSize="15sp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_domisili"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"
                android:elevation="20dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/tv_domisili">
                <LinearLayout
                    android:id="@+id/ll_domisili"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
                <TextView
                    android:id="@+id/negara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/negara"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/secondary_01"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/kota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kota"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/secondary_01"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_profesi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/green_01"
                android:textSize="15sp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cd_domisili"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profesi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"
                android:elevation="20dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/tv_profesi">
                <LinearLayout
                    android:id="@+id/ll_detailprofesi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
                <TextView
                    android:id="@+id/pengalaman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pengalaman"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/secondary_01"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/peran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peran"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/secondary_01"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/industri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/industri"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/secondary_01"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/office_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/office"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="90dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/rolesoffice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/secondary_01"
                    android:layout_marginTop="115dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/mulai_bekerja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/secondary_01"
                    android:layout_marginTop="140dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/riwayat_pendidikan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/riwayat"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/green_01"
                android:textSize="15sp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_riwayat_pendididikan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="30dp"
                android:background="@color/white"
                android:elevation="20dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/tv_domisili">
                <LinearLayout
                    android:id="@+id/ll_riwayat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
                <TextView
                    android:id="@+id/nama_institusi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_institusi"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/tingkat_pendidikan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prodi"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/secondary_01"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listAlumni"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_post" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>